# qa-buddy

./: .env.example  .gitignore  claude.md  main.py  pyproject.toml
.claude/commands/: save-notes.md
apps/api/: main.py
apps/api/routes/: auth.py  folders.py  invites.py  memberships.py  organizations.py  projects.py  suites.py  (+2 more)
apps/portal/: package-lock.json
designs/: analytics-page.jsx  dashboard-overview.jsx  generations-page.jsx  integrations-page.jsx  login-page.jsx  pricing-page.jsx  repos-page.jsx  settings-page.jsx  test-cases-page.jsx
designs/bold-colorful/: analytics-page.jsx  dashboard-overview.jsx  generations-page.jsx  integrations-page.jsx  landing-page.jsx  login-page.jsx  pricing-page.jsx  repos-page.jsx  settings-page.jsx  test-cases-page.jsx
designs/dark-mode/: analytics-page.jsx  dashboard-overview.jsx  generations-page.jsx  integrations-page.jsx  landing-page.jsx  login-page.jsx  pricing-page.jsx  repos-page.jsx  settings-page.jsx  test-cases-page.jsx
docs/: folder-model.md  learning-notes.md  model-equals-table.md  model-vs-schema.md  multi-org-login-flow.md  primary-key-and-foreign-key.md  project-model.md  suite-model.md  test-case-model.md  user-schemas.md  why-basemodel-not-baseschema.md  why-inherit-from-basemodel.md  why-pydantic-schemas.md
frontend-playground/: 01-first-component.html  02-one-thread-freeze.html
migrations/: env.py
migrations/versions/: 0c823846db75_add_is_personal_to_organizations.py  0cb8a8ff6e64_initial_tables.py  1706c6d8f018_cascade_memberships_on_user_and_org_.py  6cc2f3c20c72_add_invites_table.py
(+13 files in other folders)
