[tool.poetry]
name = "qa-buddy"
version = "0.1.0"
description = "AI-powered QA platform that generates test cases from code"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = "^0.30"
anthropic = "^0.40"
pydantic-settings = "^2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.48"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
